--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,70 +1,25 @@
-*{
+.card-container{
+width: 300px;
+overflow: hidden;
+box-shadow: 0px 0px 15px -5px;
+}
+
+.image-container img{
+    overflow: hidden;
+    height: 200px;
+}
+
+.card-content{
+    margin: 1rem;
+    margin-top: 0.3rem;
+}
+
+h3,p{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    box-sizing: border-box;
-}
-body {
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #EFEFEF;
-  }
-
-.slide-content{
-    margin:0 40px;
-}
-.card{
-    border-radius: 25px;
-    background-color: #FFF;
-}
-.card-image{
-    position: relative;
-    height: 150px;
-    width: 150px;
-    border-radius: 50%;
-    padding: 3px;
+    color: aquamarine;
 }
 
-.card-image #tt{
-    height: 100%;
-    width: 100%;
-    object-fit: 50%;
-    border-radius: 50%;
-    border: 4px solid #4070f4;
-}
-
-.image-content,
-.card-content{
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px 14px;
-}
-
-.image-content{
-    position: relative;
-    row-gap: 5px;
-    padding: 25px 0;
-  }
-.name{
-    font-size: 18px;
-    font-weight: 500;
-    color: #333;
-}
-
-.artist{
-    font-size: 14px;
-    color: #707070;
-    text-align: center;
-}
-
-.overlay{
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    left: 0;
-    top: 0;
-    color:#4070f4;
+.card-title{
+    margin-bottom: 0.5rem;
 }
